--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node index.js",
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "author": "",
